# letsbonkfun-copy-trading-bot

./: Cargo.toml  README.md  config.template.env  test_build.sh
plans/: example.json
src/: bagsfm.rs  config.rs  dex.rs  main.rs  meteora.rs  solana.rs
src/commands/: bundler.rs  export.rs  market_maker.rs  sniper.rs  tracker.rs
