
[package]
name = "reoswellecho-bagsfm"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ReoswellEcho Team <team@reoswellecho.trade>"]
description = "ReoswellEcho — bags.fm trading bot scaffold (bundler, sniper, market-maker, tracker, export)."
readme = "README.md"
repository = "https://example.com/reoswellecho-bagsfm"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dotenvy = "0.15"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"

# Solana blockchain integration
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.2"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }

# Additional utilities
base64 = "0.21"
bs58 = "0.5"
rand = "0.8"
